--- a/web/views/home.ejs
+++ b/web/views/home.ejs
@@ -40,8 +40,8 @@
                 </div>
               </div>
               <div class="pt-5">
-                <a href="https://grafana.com" target="_blank"><img src="images/grafana.png"></a>
-                <a href="https://prometheus.io/" target="_blank"><img class="mx-3" src="images/prometheus.png"></a>
+                <a href="http://a4fece6c315ed4113891f756f4cacc93-469063211.ap-northeast-1.elb.amazonaws.com/d/4b545447f/1-kubernetes-all-in-one-cluster-monitoring-kr?orgId=1&refresh=10s" target="_blank"><img src="images/grafana.png"></a>
+                <a href="http://ab7a0ab0d0d614c80a9e00a591cf72ef-630421460.ap-northeast-1.elb.amazonaws.com/graph" target="_blank"><img class="mx-3" src="images/prometheus.png"></a>
               </div>
               <div class="pt-5">
                 <a class="btn fw-bolder" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false"
